fix : side alignment

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 
 label{
     display: block;
-    padding-top: 1rem;
+    padding-top: 0.6rem;
     
 }
 #btn-calculate{
@@ -26,12 +26,12 @@ label{
 }
 
 h1{
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 
 #initial-price{
-    margin-top: 1rem;
+    margin-top: 0rem;
     margin-left: 5rem;
     margin-bottom: 0.5rem;
    
